--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -83,6 +83,7 @@ jobs:
         sudo timedatectl set-timezone "$TZ"
         sudo mkdir -p /${{ env.DIY_WORK }}
         sudo chown ${USER}:${GROUPS} /${{ env.DIY_WORK }}
+        sudo apt-get install -y libfuse-dev
 
     - name: 下载"${{matrix.target}}"源码
       working-directory: /${{ env.DIY_WORK }}
